kustomization-wordpress-mysql/wordpress-deployment.yaml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: snukon3/php-opcache-fpm-wp:7.4-5.3.3
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      - image: nginx
        name: nginx
        imagePullPolicy : IfNotPresent
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
        - name: nginxconf
          mountPath: /etc/nginx/conf.d            
          readOnly: true
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
      - name: nginxconf
        configMap:
          defaultMode: 256
          name: nginxthroughpass
          optional: false
