kustomization-wordpress-mysql/wordpress-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: wordpress
    tier: frontend
  type: ClusterIP
