kustomization-wordpress-mysql/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    # Dev-Only: cert-manager.io/issuer: "letsencrypt-staging"
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    # nginx.ingress.kubernetes.io/fastcgi_send_timeout: "1800"
    # nginx.ingress.kubernetes.io/fastcgi_read_timeout: "1800"
    # nginx.ingress.kubernetes.io/backend-protocol: "FCGI"
    # nginx.ingress.kubernetes.io/fastcgi-index: "index.php"
    # nginx.ingress.kubernetes.io/fastcgi-params-configmap: "default/wordpress-configmap"
    # nginx.ingress.kubernetes.io/server-snippets: |
    #     location ~ \.php$ {
    #             try_files $uri =404;
    #             fastcgi_split_path_info ^(.+\.php)(/.+)$;
    #             fastcgi_pass wordpress-site:9000;
    #             fastcgi_index index.php;
    #             include fastcgi_params;
    #             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
    #             fastcgi_param PATH_INFO $fastcgi_path_info;
    #     }
  name: wordpress
spec:
  rules:
  - host: lesetraum.blog
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
  tls:
  - hosts:
    - lesetraum.blog
    secretName: lesetraum-blog-tls
